# crew-ai

./: LICENSE  README.md
crewai_supabase/: get_the_connection.py  main.py
crewai_supabase/supabase_tools/: supabase_delete_row_tool.py  supabase_get_all_rows_tool.py  supabase_get_row_tool.py  supabase_insert_row_tool.py  supabase_update_tool.py
example_project/: README.md  pyproject.toml
example_project/src/example_project/: crew.py  main.py  supaBase.py
