[project]
name = "example_project"
version = "0.1.0"
description = "example-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
example_project = "example_project.main:run"
run_crew = "example_project.main:run"
train = "example_project.main:train"
replay = "example_project.main:replay"
test = "example_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
